# simple-actors

./: CHANGELOG.md  Cargo.toml  README.md
.gitea/workflows/: check.yaml
.github/workflows/: check.yaml
src/: actor.rs  context.rs  envelope.rs  handle.rs  lib.rs  message.rs
tests/: errors.rs  ping.rs  recipient.rs  weak.rs
