[package]
name = "simple-actors"
version = "0.4.1"
description = "Simple actor system based on Tokio"
authors = ["Blake Rain <blake.rain@blakerain.com>"]
repository = "https://github.com/BlakeRain/simple-actors"
edition = "2021"
rust-version = "1.75"

[dependencies]
futures = { version = "0.3" }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
env_logger = { version = "0.11" }
test-log = { version = "0.2", features = ["trace"] }

